homeassistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f host/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: homeassistant
  name: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: homeassistant
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f host/docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/host-default: "true"
        io.kompose.service: homeassistant
    spec:
      containers:
        - image: homeassistant/home-assistant:latest
          name: homeassistant
          ports:
            - containerPort: 8123
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: homeassistant-claim0
            - mountPath: /etc/localtime
              name: homeassistant-claim1
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: homeassistant-claim0
          persistentVolumeClaim:
            claimName: homeassistant-claim0
        - name: homeassistant-claim1
          persistentVolumeClaim:
            claimName: homeassistant-claim1
            readOnly: true
status: {}
