plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: plex
  name: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: plex
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/host-default: "true"
        io.kompose.service: plex
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PLEX_CLAIM
            - name: PUID
              value: "1000"
            - name: VERSION
              value: docker
          image: lscr.io/linuxserver/plex:latest
          name: plex
          ports:
            - containerPort: 32400
          resources: {}
      restartPolicy: Always
status: {}
