portainer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f host/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: portainer
  name: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: portainer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f host/docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/host-default: "true"
        io.kompose.service: portainer
    spec:
      containers:
        - image: portainer/portainer-ce:latest
          name: portainer
          ports:
            - containerPort: 9443
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: portainer-data
            - mountPath: /var/run/docker.sock
              name: portainer-claim1
      restartPolicy: Always
      volumes:
        - name: portainer-data
          persistentVolumeClaim:
            claimName: portainer-data
        - name: portainer-claim1
          persistentVolumeClaim:
            claimName: portainer-claim1
status: {}
