promtail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: promtail
  name: promtail
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: promtail
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/host-loki: "true"
        io.kompose.service: promtail
    spec:
      containers:
        - args:
            - -config.file=/etc/promtail/config.yml
          image: grafana/promtail:2.6.1
          name: promtail
          resources: {}
          volumeMounts:
            - mountPath: /var/log
              name: promtail-claim0
            - mountPath: /etc/promtail
              name: promtail-claim1
      restartPolicy: Always
      volumes:
        - name: promtail-claim0
          persistentVolumeClaim:
            claimName: promtail-claim0
        - name: promtail-claim1
          persistentVolumeClaim:
            claimName: promtail-claim1
status: {}
