homeassistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f host/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: homeassistant
  name: homeassistant
spec:
  ports:
    - name: "8123"
      port: 8123
      targetPort: 8123
  selector:
    io.kompose.service: homeassistant
status:
  loadBalancer: {}
