plex-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: plex
  name: plex
spec:
  ports:
    - name: "32400"
      port: 32400
      targetPort: 32400
  selector:
    io.kompose.service: plex
status:
  loadBalancer: {}
