portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f host/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: portainer
  name: portainer
spec:
  ports:
    - name: "9443"
      port: 9443
      targetPort: 9443
  selector:
    io.kompose.service: portainer
status:
  loadBalancer: {}
